<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TentangPelamarActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".AboutFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewJudulBesar_AB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="VISI DAN MISI"
                    android:layout_gravity="center"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/textViewJudulVisi_AB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_gravity="center"
                    android:text="VISI"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textViewIsiVisi_AB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/text_border"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/visi"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewJudulMisi_AB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_gravity="center"
                    android:text="MISI"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textViewIsiMisi_AB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="center"
                    android:background="@drawable/text_border"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/misi"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/textViewJudulProfil_AB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_gravity="center"
                    android:text="PROFIL"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/textViewIsiProfil_AB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/text_border"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/profil"
                    android:textSize="15dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationViewPelTentang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:menu="@menu/bottom_nav_pel"
        app:itemIconTint="@color/orange"
        app:itemTextColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/abu"/>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>