<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivitySiginPerusahaan"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:onClick="btn_kembali_homepage_per"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="Kembali"
            android:textAlignment="inherit"
            android:textColor="@color/orange" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/logosccpcr"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:text="@string/welcome1"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:text="@string/welcome2"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Masuk Sebagai Perusahaan"
                    android:layout_marginTop="40dp"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailPer"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="Masukkan email"
                        android:textSize="15dp"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passPer"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="Masukkan kata sandi"
                        android:inputType="textPassword"
                        android:textSize="15dp"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSiginPerId"
                    android:onClick="btn_masuk_per"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:text="Masuk"
                    android:backgroundTint="@color/hijau"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="7dp"
                    android:layout_marginTop="30dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13dp"
                        android:text="Belum punya akun ?"
                        android:textAlignment="center"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/TextViewToRegisPer"
                        android:clickable="true"
                        android:onClick="btn_regis_per"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13dp"
                        android:text=" Daftar"
                        android:textAlignment="center"
                        android:textColor="@color/orange"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
